# Sudoku-Resolver

./: Doxyfile  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  doxygen.cfg  main.c  sdk_resolver.c  sdk_resolver.h
grids/: diabolique.sdk  difficult.sdk  easy.sdk  grid1.sdk  grid2.sdk  impossible.sdk  impossible2.sdk
gui/: .Makefile.swp  .sdk_gui.c.swp  .sdk_gui.h.swp  Makefile  sdk_gui.c  sdk_gui.h
src/: .main.c.swp  Makefile  Makefile.am  Makefile.in  main.c  sdk_colors.h  sdk_error.h  sdk_grid.c  sdk_grid.h  sdk_gui.c  sdk_gui.h  sdk_resolver.c  sdk_resolver.h  sdk_sidebar.c  sdk_sidebar.h
